--- a/index.html
+++ b/index.html
@@ -6,5 +6,26 @@
 </head>
 <body>
 
+  <header role="banner">
+
+    <div class="nav-home"
+
+      <div class="logo">
+        <img></img>
+        <h1>Pat Boileau Massage Therapy & Athletic Training</h1>
+      </div>
+
+      <nav role="navigation">
+        <ul>
+          <li><a href="index.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="booking.html">Booking</a></li>
+        </ul>
+      </nav>
+
+
+
+
+
 </body>
 </html>
