Create main content

--- a/index.html
+++ b/index.html
@@ -22,6 +22,78 @@
           <li><a href="booking.html">Booking</a></li>
         </ul>
       </nav>
+    </div>
+
+    <div class="banner-home">
+      <div class="relative">
+        <img class="img-flex" src="images/banner-home.jpg" alt="massage-img">
+      </div>
+
+      <div>
+        <h1>Know Pain, Know Gain.</h1>
+        <p>Understanding your body is step one. Healing it is step two.</p>
+        <p>Giving you the tools you need to protect your body.</p>
+      </div>
+
+      <div class="btn">
+        <a href="booking.html">Book Now</a>
+      </div>
+    </div>
+  </header>
+
+  <main class="main">
+
+    <h1>ABOUT PATTY B</h1>
+
+    <img></img>
+
+    <article>
+      <p>My fitness journey began early in high school. As a once smaller teen, I wanted to be able to jump higher so that I could have a shot at competing in volleyball. I decided to start with some bodybuilding training and after a while, moved to targeted volleyball specific training. After staying consistent with my training and seeing improvements, I became hooked with strength development. I began coaching different sports (volleyball, soccer, basketball) and started designing various strength programs for friends.
+
+      <p>I graduated from Health and Fitness Promotion at College Boreal, giving me the ability to obtain professional certification in personal training. After one year working in the field, I decided to go back to school to obtain a registration in massage therapy (RMT), which would not only help me understand the human body at a deeper level, but to also allow me to provide an additional service to current and future clients.
+
+      <p>With both of these certifications, I am extremely knowledgeable of the needs, imbalances and weaknesses a client may have in their body. I am able to understand how to correct problem areas in a client’s body, while also educating them to increase awareness of their own body with the ultimate goal of decreasing future risk of injury. I look forward to helping you on your road to recovery and being a trustworthy resource to keeping your body healthy!
+
+      <small>- Pat Boileau, RMT</small>
+    </article>
+
+    <section>
+
+      <h2>CERTIFICATIONS<h2>
+      <p>Pat is certified in the following:</p>
+      <li>
+        <ul>- Registered Massage Therapy</ul>
+        <ul>- Ontario Fitness council - personal trainer</ul>
+        <ul>- Functional Movement Screen L1</ul>
+        <ul>- RockTape FMT Basic & Performance</ul>
+        <ul>- Physical literacy – High Five</ul>
+        <ul>- Certification for training ear impairment</ul>
+        <ul>- Certification for training elderly adults</ul>
+        <ul>- Group fitness instructor</ul>
+      </li>
+
+      <h2>PROFESSIONAL EXPERIENCES</h2>
+      <p>Strength and Conditioning Coach with:</p>
+      <li>
+        <ul>- Chill Volleyball</ul>
+        <ul>- College Boreal</ul>
+        <ul>- CanAm Strength & Conditioning - 1855 Athletics</ul>
+      </li>
+
+      <h2>ATHLETIC RESUME</h2>
+      <p>Volleyball 2009-2015</p>
+      <li>
+        <ul>- 2013 East Canada Cup with Griffon</ul>
+        <ul>- 2012 Silver Finish at OVA</ul>
+        <ul>- 2011 Jeux de La Francophonie Canadienne</ul>
+      </li>
+
+      <p>Weightlifting</p>
+      <li>
+        <ul>- 2020 WinterLift</ul>
+        <ul>- 2019 Provincials</ul>
+      </li>
+
 
 
 
