Edit content in main

--- a/index.html
+++ b/index.html
@@ -59,44 +59,72 @@
 
     <section>
 
-      <h2>CERTIFICATIONS<h2>
+      <h2>CERTIFICATIONS</h2>
       <p>Pat is certified in the following:</p>
-      <li>
-        <ul>- Registered Massage Therapy</ul>
-        <ul>- Ontario Fitness council - personal trainer</ul>
-        <ul>- Functional Movement Screen L1</ul>
-        <ul>- RockTape FMT Basic & Performance</ul>
-        <ul>- Physical literacy – High Five</ul>
-        <ul>- Certification for training ear impairment</ul>
-        <ul>- Certification for training elderly adults</ul>
-        <ul>- Group fitness instructor</ul>
-      </li>
+      <ul>
+        <li>Registered Massage Therapy</li>
+        <li>Ontario Fitness council - personal trainer</li>
+        <li>Functional Movement Screen L1</li>
+        <li>RockTape FMT Basic & Performance</li>
+        <li>Physical literacy – High Five</li>
+        <li>Certification for training ear impairment</li>
+        <li>Certification for training elderly adults</li>
+        <li>Group fitness instructor</li>
+      </ul>
 
       <h2>PROFESSIONAL EXPERIENCES</h2>
       <p>Strength and Conditioning Coach with:</p>
-      <li>
-        <ul>- Chill Volleyball</ul>
-        <ul>- College Boreal</ul>
-        <ul>- CanAm Strength & Conditioning - 1855 Athletics</ul>
-      </li>
+      <ul>
+        <li>Chill Volleyball</li>
+        <li>College Boreal</li>
+        <li>CanAm Strength & Conditioning - 1855 Athletics</li>
+      </ul>
 
       <h2>ATHLETIC RESUME</h2>
       <p>Volleyball 2009-2015</p>
-      <li>
-        <ul>- 2013 East Canada Cup with Griffon</ul>
-        <ul>- 2012 Silver Finish at OVA</ul>
-        <ul>- 2011 Jeux de La Francophonie Canadienne</ul>
-      </li>
+      <ul>
+        <li>2013 East Canada Cup with Griffon</li>
+        <li>2012 Silver Finish at OVA</li>
+        <li>2011 Jeux de La Francophonie Canadienne</li>
+      </ul>
 
       <p>Weightlifting</p>
-      <li>
-        <ul>- 2020 WinterLift</ul>
-        <ul>- 2019 Provincials</ul>
-      </li>
+      <ul>
+        <li>2020 WinterLift</li>
+        <li>2019 Provincials</li>
+      </ul>
+
+      <div class="btn">
+        <a href="booking.html">Book Now</a>
+      </div>
+
+    </section>
+
+  </main>
+
+  <footer role="contentinfo">
+
+    <div class="social">
+      <ul>
+        <li>
+          <i class="icon embed i-32">
+            <img class="icon embed-item" src="images/facebook-1.svg" alt="facebook">
+          </i>
+        </li>
+        <li>
+          <i class="icon embed i-32">
+            <img class="icon embed-item" src="images/instagram.svg" alt="instagram">
+          </i>
+        </li>
+      </ul>
+    </div
+
+    <div>
+      <small">© Pat Boileau.</small>
+    </div>
 
 
-
-
+</footer>
 
 
 </body>
