Added booking content

--- a/services.html
+++ b/services.html
@@ -26,6 +26,7 @@
 
     <div class="banner-services">
       <div class="relative">
+        <h1>Services</h1>
         <img class="img-flex" src="images/banner-services.jpg" alt="services-img">
       </div>
     </div>
