Add fonts to content

--- a/booking.html
+++ b/booking.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Pat Boileau RMT|Booking</title>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -34,6 +35,46 @@
 
   <main>
     <div class="booking-form">
+      <form method="POST" action="https://formspree.io/">
+          <div class="push">
+            <label for="name">Name</label>
+            <input id="name" required>
+          </div>
+          <div class="push">
+            <label for="email">Your email</label>
+            <input id="email" type="email" placeholder="example.name@email.com" name="email" aria-label="Input email address here" required>
+          </div>
+          <div class="push">
+            <label for="username">Username</label>
+            <input id="username" required>
+          </div>
+          <div class="push">
+            <label for="password">Password</label>
+            <input id="password" required>
+          </div>
+          <div class="push">
+            <label for="confirm">*Confirm Password</label>
+            <input id="confirm" required>
+          </div>
+
+          <div class="grid grid-middle text-center pad-t">
+            <div class="unit xs-1 s-1 m-1 l-1">
+
+              <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2 island-1-4 push-1-2">
+                <button type="submit" class="btn link-box text-center" aria-label="Submit your form here">Submit!</button>
+              </div>
+
+              <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2 island-1-4">
+                <section class="btn">
+                  <a class="link-box text-center" aria-label="Go to product features page" href="tour.html">See Features</a>
+                </section>
+              </div>
+
+            </div>
+          </div>
+
+        </form>
+
 
 
   <footer role="contentinfo">
