--- a/services.html
+++ b/services.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Pat Boileau RMT|Services</title>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
 
