--- a/services.html
+++ b/services.html
@@ -3,17 +3,20 @@
 <head>
   <meta charset="utf-8">
   <title>Pat Boileau RMT|Services</title>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Ubuntu:wght@300;700&display=swap" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
 
   <header role="banner">
 
     <div class="nav-home"
-
-      <div class="logo">
-        <img></img>
-        <h1>Pat Boileau Massage Therapy & Athletic Training</h1>
+      <div class="logo" aria-label="Pat Boileau Logo">
+        <a href="index.html">
+          <i class="icon">
+            <svg><use xlink:href="images/icon-sets-sheet.svg#pb-horizontal"</use></svg>
+          </i>
+        </a>
       </div>
 
       <nav role="navigation">
@@ -25,13 +28,11 @@
       </nav>
     </div>
 
-    <div class="banner-services">
-      <div class="relative">
-        <h1>Services</h1>
-        <img class="img-flex" src="images/banner-services.jpg" alt="services-img">
-      </div>
-    </div>
+      <img class="img-banner" src="images/banner-img.jpg" alt="workout background image">
 
+      <div class="banner-content">
+        <h1>Services</h1>
+      </div>
   </header>
 
   <article>
@@ -153,7 +154,7 @@
       <ul>
         <li>
           <i class="icon embed i-32">
-            <img class="icon embed-item" src="images/facebook-1.svg" alt="facebook">
+            <img class="icon embed-item" src="images/facebook.svg" alt="facebook">
           </i>
         </li>
         <li>
