--- a/services.html
+++ b/services.html
@@ -5,6 +5,7 @@
   <title>Pat Boileau RMT|Services</title>
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Ubuntu:wght@300;700&display=swap" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
 
@@ -28,7 +29,7 @@
       </nav>
     </div>
 
-      <img class="img-banner" src="images/banner-img.jpg" alt="workout background image">
+      <img class="img-service-ban" src="images/banner-img.jpg" alt="workout background image">
 
       <div class="banner-content">
         <h1>Services</h1>
@@ -148,17 +149,17 @@
 
   </main>
 
-  <footer role="contentinfo">
+  <footer class="footer" role="contentinfo">
 
     <div class="social">
       <ul>
         <li>
-          <i class="icon embed i-32">
+          <i class="icon">
             <img class="icon embed-item" src="images/facebook.svg" alt="facebook">
           </i>
         </li>
         <li>
-          <i class="icon embed i-32">
+          <i class="icon">
             <img class="icon embed-item" src="images/instagram.svg" alt="instagram">
           </i>
         </li>
@@ -166,7 +167,7 @@
     </div
 
     <div>
-      <small">© Pat Boileau.</small>
+      <p><small>© Pat Boileau.</small></p>
     </div>
 
 
