Fix banner font size

--- a/index.html
+++ b/index.html
@@ -75,12 +75,13 @@
       </div>
 
       <div class="prof">
-        <h2>PROFESSIONAL EXPERIENCES</h2>
+        <h2>WORK EXPERIENCES</h2>
         <p>Strength and Conditioning Coach with:</p>
         <ul>
           <li>Chill Volleyball</li>
           <li>College Boreal</li>
-          <li>CanAm Strength & Conditioning - 1855 Athletics</li>
+          <li>CanAm Strength & Conditioning</li>
+          <li>1855 Athletics</li>
         </ul>
       </div>
 
