Change button border

--- a/services.html
+++ b/services.html
@@ -31,7 +31,7 @@
 
       <img class="img-service-ban" src="images/banner-img.jpg" alt="workout background image">
 
-      <div class="banner-content">
+      <div class="banner-content-s">
         <h1>Services</h1>
       </div>
   </header>
