--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
   <header role="banner">
 
-    <div class="nav-home"
+    <div class="nav-home">
       <div class="logo" aria-label="Pat Boileau Logo">
         <a href="index.html">
           <i class="icon">
-            <svg><use xlink:href="images/icon-sets-sheet.svg#pb-horizontal"</use></svg>
+            <svg><use xlink:href="images/icon-sets-sheet.svg#pb-horizontal"></use></svg>
           </i>
         </a>
       </div>
@@ -29,28 +29,26 @@
       </nav>
     </div>
 
-      <img class="img-banner" src="images/banner-img.jpg" alt="workout background image">
+    <img class="img-banner" src="images/banner-img.jpg" alt="workout background image">
 
-      <div class="banner-content">
-        <h1>Know Pain, Know Gain.</h1>
-        <p>Understanding your body is step one. Healing it is step two.</p>
-        <p>Giving you the tools you need to protect your body.</p>
-        <div class="btn">
-          <a href="booking.html">Book Now</a>
-        </div>
+    <div class="banner-content">
+      <h1>Know Pain, Know Gain.</h1>
+      <p>Understanding your body is step one. Healing it is step two.</p>
+      <p>Giving you the tools you need to protect your body.</p>
+      <div class="btn">
+        <a href="booking.html">Book Now</a>
       </div>
+    </div>
   </header>
 
-  <main class="main">
+  <main class="main" role="main">
 
-    <h1>ABOUT PATTY B</h1>
-
-    <img></img>
+    <h2>ABOUT PATTY B</h2>
 
     <article>
-      <p>My fitness journey began early in high school. As a once smaller teen, I wanted to be able to jump higher so that I could have a shot at competing in volleyball. I decided to start with some bodybuilding training and after a while, moved to targeted volleyball specific training. After staying consistent with my training and seeing improvements, I became hooked with strength development. I began coaching different sports (volleyball, soccer, basketball) and started designing various strength programs for friends.
+      <p>My fitness journey began early in high school. As a once smaller teen, I wanted to be able to jump higher so that I could have a shot at competing in volleyball. I decided to start with some bodybuilding training and after a while, moved to targeted volleyball specific training. After staying consistent with my training and seeing improvements, I became hooked with strength development. I began coaching different sports (volleyball, soccer, basketball) and started designing various strength programs for friends.</p>
 
-      <p>I graduated from Health and Fitness Promotion at College Boreal, giving me the ability to obtain professional certification in personal training. After one year working in the field, I decided to go back to school to obtain a registration in massage therapy (RMT), which would not only help me understand the human body at a deeper level, but to also allow me to provide an additional service to current and future clients.
+      <p>I graduated from Health and Fitness Promotion at College Boreal, giving me the ability to obtain professional certification in personal training. After one year working in the field, I decided to go back to school to obtain a registration in massage therapy (RMT), which would not only help me understand the human body at a deeper level, but to also allow me to provide an additional service to current and future clients.</p>
 
       <p>With both of these certifications, I am extremely knowledgeable of the needs, imbalances and weaknesses a client may have in their body. I am able to understand how to correct problem areas in a client’s body, while also educating them to increase awareness of their own body with the ultimate goal of decreasing future risk of injury. I look forward to helping you on your road to recovery and being a trustworthy resource to keeping your body healthy!</p>
 
@@ -60,7 +58,7 @@
     <section class="resume">
 
       <div class="cert">
-        <h2>CERTIFICATIONS</h2>
+        <h3>CERTIFICATIONS</h3>
         <p>Pat is certified in the following:</p>
         <ul>
           <li>Registered Massage Therapy</li>
@@ -75,7 +73,7 @@
       </div>
 
       <div class="prof">
-        <h2>WORK EXPERIENCES</h2>
+        <h3>WORK EXPERIENCES</h3>
         <p>Strength and Conditioning Coach with:</p>
         <ul>
           <li>Chill Volleyball</li>
@@ -86,7 +84,7 @@
       </div>
 
       <div class="athl">
-        <h2>ATHLETIC RESUME</h2>
+        <h3>ATHLETIC RESUME</h3>
         <p>Volleyball 2009-2015</p>
         <ul>
           <li>2013 East Canada Cup with Griffon</li>
@@ -123,15 +121,12 @@
           </i>
         </li>
       </ul>
-    </div
+    </div>
 
     <div>
       <p><small>© Pat Boileau.</small></p>
     </div>
-
-
-</footer>
-
+  </footer>
 
 </body>
 </html>
