Add skip links to body

--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
   <title>Pat Boileau RMT</title>
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Ubuntu:wght@300;700&display=swap" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link href="favicon-196.png" rel="icon" type="image/png">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
+
+  <ul class="skip-links">
+    <li><a href="#nav">Skip to navigation</a></li>
+    <li><a href="#main">Skip to main content</a></li>
+  </ul>
 
   <header role="banner">
 
@@ -18,7 +25,7 @@
         </i>
       </div>
 
-      <nav role="navigation">
+      <nav role="navigation" id="nav" tabindex="0">
         <ul>
           <li><a href="index.html">About</a></li>
           <li><a href="services.html">Services</a></li>
@@ -39,7 +46,7 @@
     </div>
   </header>
 
-  <main class="main" role="main">
+  <main class="main" role="main" id="main" tabindex="0">
 
     <h2>ABOUT PATTY B</h2>
 
