Add shadows to cards

--- a/index.html
+++ b/index.html
@@ -48,60 +48,72 @@
 
   <main class="main" role="main" id="main" tabindex="0">
 
-    <h2>ABOUT PATTY B</h2>
+      <article class="about-container">
 
-    <article>
-      <p>My fitness journey began early in high school. As a once smaller teen, I wanted to be able to jump higher so that I could have a shot at competing in volleyball. I decided to start with some bodybuilding training and after a while, moved to targeted volleyball specific training. After staying consistent with my training and seeing improvements, I became hooked with strength development. I began coaching different sports (volleyball, soccer, basketball) and started designing various strength programs for friends.</p>
+        <div class="about">
 
-      <p>I graduated from Health and Fitness Promotion at College Boreal, giving me the ability to obtain professional certification in personal training. After one year working in the field, I decided to go back to school to obtain a registration in massage therapy (RMT), which would not only help me understand the human body at a deeper level, but to also allow me to provide an additional service to current and future clients.</p>
+          <h2>ABOUT PATTY B</h2>
+          <p>My fitness journey began early in high school. As a once smaller teen, I wanted to be able to jump higher so that I could have a shot at competing in volleyball. I decided to start with some bodybuilding training and after a while, moved to targeted volleyball specific training. After staying consistent with my training and seeing improvements, I became hooked with strength development. I began coaching different sports (volleyball, soccer, basketball) and started designing various strength programs for friends.</p>
 
-      <p>With both of these certifications, I am extremely knowledgeable of the needs, imbalances and weaknesses a client may have in their body. I am able to understand how to correct problem areas in a client’s body, while also educating them to increase awareness of their own body with the ultimate goal of decreasing future risk of injury. I look forward to helping you on your road to recovery and being a trustworthy resource to keeping your body healthy!</p>
+          <p>I graduated from Health and Fitness Promotion at College Boreal, giving me the ability to obtain professional certification in personal training. After one year working in the field, I decided to go back to school to obtain a registration in massage therapy (RMT), which would not only help me understand the human body at a deeper level, but to also allow me to provide an additional service to current and future clients.</p>
 
-      <p>- Pat Boileau, RMT</p>
+          <p>With both of these certifications, I am extremely knowledgeable of the needs, imbalances and weaknesses a client may have in their body. I am able to understand how to correct problem areas in a client’s body, while also educating them to increase awareness of their own body with the ultimate goal of decreasing future risk of injury. I look forward to helping you on your road to recovery and being a trustworthy resource to keeping your body healthy!</p>
+
+          <p>- Pat Boileau, RMT</p>
+        </div>
+        <div class="about-pic">
+          <img class="img-pat" src="images/pat-profile.jpg" alt="pat profile picture">
+        </div>
     </article>
 
     <section class="resume">
 
-      <div class="cert">
-        <h3>CERTIFICATIONS</h3>
-        <p>Pat is certified in the following:</p>
-        <ul>
-          <li>Registered Massage Therapy</li>
-          <li>Ontario Fitness council - personal trainer</li>
-          <li>Functional Movement Screen L1</li>
-          <li>RockTape FMT Basic & Performance</li>
-          <li>Physical literacy – High Five</li>
-          <li>Certification for training ear impairment</li>
-          <li>Certification for training elderly adults</li>
-          <li>Group fitness instructor</li>
-        </ul>
+      <div class="card">
+        <div class="cert">
+          <h3>CERTIFICATIONS</h3>
+          <p>Pat is certified in the following:</p>
+          <ul>
+            <li>Registered Massage Therapy</li>
+            <li>Ontario Fitness council - personal trainer</li>
+            <li>Functional Movement Screen L1</li>
+            <li>RockTape FMT Basic & Performance</li>
+            <li>Physical literacy – High Five</li>
+            <li>Certification for training ear impairment</li>
+            <li>Certification for training elderly adults</li>
+            <li>Group fitness instructor</li>
+          </ul>
+        </div>
       </div>
 
-      <div class="prof">
-        <h3>WORK EXPERIENCES</h3>
-        <p>Strength and Conditioning Coach with:</p>
-        <ul>
-          <li>Chill Volleyball</li>
-          <li>College Boreal</li>
-          <li>CanAm Strength & Conditioning</li>
-          <li>1855 Athletics</li>
-        </ul>
+      <div class="card">
+        <div class="prof">
+          <h3>WORK EXPERIENCES</h3>
+          <p>Strength and Conditioning Coach with:</p>
+          <ul>
+            <li>Chill Volleyball</li>
+            <li>College Boreal</li>
+            <li>CanAm Strength & Conditioning</li>
+            <li>1855 Athletics</li>
+          </ul>
+        </div>
       </div>
 
-      <div class="athl">
-        <h3>ATHLETIC RESUME</h3>
-        <p>Volleyball 2009-2015</p>
-        <ul>
-          <li>2013 East Canada Cup with Griffon</li>
-          <li>2012 Silver Finish at OVA</li>
-          <li>2011 Jeux de La Francophonie Canadienne</li>
-        </ul>
+      <div class="card">
+        <div class="athl">
+          <h3>ATHLETIC RESUME</h3>
+          <p>Volleyball 2009-2015</p>
+          <ul>
+            <li>2013 East Canada Cup with Griffon</li>
+            <li>2012 Silver Finish at OVA</li>
+            <li>2011 Jeux de La Francophonie Canadienne</li>
+          </ul>
 
-        <p>Weightlifting</p>
-        <ul>
-          <li>2020 WinterLift</li>
-          <li>2019 Provincials</li>
-        </ul>
+          <p>Weightlifting</p>
+          <ul>
+            <li>2020 WinterLift</li>
+            <li>2019 Provincials</li>
+          </ul>
+        </div>
       </div>
     </section>
 
@@ -116,12 +128,12 @@
     <div class="social">
       <ul>
         <li>
-          <i class="icon">
+          <i class="icon-social">
             <img class="icon embed-item" src="images/facebook.svg" alt="facebook">
           </i>
         </li>
         <li>
-          <i class="icon">
+          <i class="icon-social">
             <img class="icon embed-item" src="images/instagram.svg" alt="instagram">
           </i>
         </li>
