--- a/services.html
+++ b/services.html
@@ -13,14 +13,12 @@
 
     <div class="nav-home"
       <div class="logo" aria-label="Pat Boileau Logo">
-        <a href="index.html">
           <i class="icon">
             <svg><use xlink:href="images/icon-sets-sheet.svg#pb-horizontal"</use></svg>
           </i>
-        </a>
       </div>
 
-      <nav role="navigation">
+      <nav role="navigation" id="nav" tabindex="0">
         <ul>
           <li><a href="index.html">About</a></li>
           <li><a href="services.html">Services</a></li>
@@ -31,7 +29,7 @@
 
       <img class="img-service-ban" src="images/banner-img.jpg" alt="workout background image">
 
-      <div class="banner-content-s">
+      <div class="banner-service">
         <h1>Services</h1>
       </div>
   </header>
