Edit the navigation

--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
 
   <header role="banner">
 
-    <div class="nav-home"
+    <div class="nav-home">
       <div class="logo" aria-label="Pat Boileau Logo">
           <i class="icon">
             <svg><use xlink:href="images/icon-sets-sheet.svg#pb-horizontal"</use></svg>
