--- a/booking.html
+++ b/booking.html
@@ -11,7 +11,7 @@
 
   <header role="banner">
 
-    <div class="nav-home"
+    <div class="nav-home">
       <div class="logo" aria-label="Pat Boileau Logo">
         <a href="index.html">
           <i class="icon">
