Fix media query

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </div>
 
     <img class="img-banner" src="images/banner-img.jpg" alt="workout background image">
+    <img class="img-banner-s" src="images/banner-img-small.jpg" alt="workout background image">
 
     <div class="banner-content">
       <h1>Know Pain, Know Gain.</h1>
